# NeuralExtractor

./: .gitignore  .pre-commit-config.yaml  .replit  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  DISCLAIMER.md  LICENSE  NeuralExtractor.spec  NeuralExtractorV3.spec  PHASE2_SUMMARY.md  README.md  SUBTITLE_FEATURE.md  auto_updater.py  build.bat  dependencies.py  install.bat  main.py  pyproject.toml  requirements.txt  ruff.toml  start.bat  theme.py  youtube_downloader.py
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yml  release.yml
docs/: UPDATE_ARCHITECTURE.md  V3.0.3-RELIABILITY.md  V3.0.4-UPDATER-HOTFIX.md  V3.0.5-YOUTUBE-CONNECTION.md
docs/release-notes/: V3.0.4.md  V3.0.5.md  V3.0.6.md  V3.0.7.md
scripts/: packaged_updater_smoke.py  packaged_worker_protocol_smoke.py  packaged_youtube_connection_smoke.py  release_tools.py
src/neural_extractor/: __init__.py  config.py  logger.py  subtitles.py  thumbnail.py  validator.py
src/neural_extractor/core/: __init__.py  downloader.py  subtitle_manager.py  updater.py
src/neural_extractor/gui/: __init__.py  main_window.py  main_window_v2.py
src/neural_extractor_v3/: __init__.py  app.py  config.py  models.py  utils.py
src/neural_extractor_v3/core/: __init__.py  auth.py  diagnostics.py  downloader.py  format_selection.py  js_runtime.py  pot_provider.py  process_control.py  subtitles.py  update_installer.py  update_manifest.py  update_ownership.py  updater.py  youtube_connection.py  youtube_connection_smoke.py  youtube_errors.py  youtube_verifier.py  ytdlp_worker.py
src/neural_extractor_v3/gui/: __init__.py  main_window.py  managed_browser_dialog.py  responsive_layout.py  youtube_connection_dialog.py
tests/: __init__.py  test_app_update_modes.py  test_auth.py  test_config.py  test_diagnostics.py  test_download_worker.py  test_downloader_options.py  test_format_selection.py  test_guided_auth_ui.py  test_managed_browser.py  test_pot_provider.py  test_process_control.py  test_release_tools.py  test_responsive_gui.py  test_subtitles.py  test_thumbnail.py  test_update_installer.py  test_update_manifest.py  test_update_ownership.py  test_update_worker_boundaries.py  test_updater.py  test_utils.py  test_validator.py  test_version_305.py  test_youtube_connection.py  test_youtube_errors.py  test_youtube_verifier.py  test_ytdlp_worker.py
