[project]
name = "neural-extractor"
version = "2.0.0"
description = "A modern, user-friendly application for downloading YouTube videos, thumbnails, and subtitles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Neuralshield & 0xRootNull"}
]
keywords = ["youtube", "downloader", "video", "extractor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2026.7.4",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "youtube-transcript-api>=1.2.4",
    "PyQt6>=6.11.0",
    "curl-cffi>=0.15.0",
    "cffi>=2.0.0",
    "rich>=15.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.21.0",
]
dev = [
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=83.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neural_extractor"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
